# Mlopsvehicleinsurance

./: .gitignore  README.md  app.py  pyproject.toml  setup.py
notebook/: mongoDB_demo.ipynb
src/entity/: config_entity.py
src/pipline/: training_pipeline.py
