[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for vehicle insurance productionizing models"
authors = [{name = "Sohail Shaikh", email = "sohailsk9866@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}